--- a/build.xml
+++ b/build.xml
@@ -41,8 +41,9 @@
 	
 	<target name="build" depends="clean,jslint">
 		<buildnumber/>
-		<mkdir dir="work"/>
+		<mkdir dir="work/stack"/>
 		
+		<!-- full -->
 		<concat destfile="work/easyXDM.combined.js">	
 			<fileset dir="." includes="${project.src.dir}/begin_scope.txt" />
 			<fileset dir="." includes="${project.src.dir}/Core.js" />
@@ -60,7 +61,6 @@
 			<fileset dir="." includes="${project.src.dir}/stack/RpcBehavior.js" />
 			<fileset dir="." includes="${project.src.dir}/end_scope.txt" />
 		</concat>
-		
 		<replace file="work/easyXDM.combined.js" token="%%version%%" value="${project.build.version}.${build.number}"/>
 		
 		<!-- Process pre proccesing instructions like #if/#endif etc -->
@@ -103,6 +103,87 @@
 		
 		<delete file="work/easyXDM.combined.js" quiet="true"/>
 		
+		<!-- async-->
+		<concat destfile="work/easyXDM.async.combined.js">	
+			<fileset dir="." includes="${project.src.dir}/begin_scope.txt" />
+			<fileset dir="." includes="${project.src.dir}/Core.js" />
+			<fileset dir="." includes="${project.src.dir}/end_scope.txt" />
+		</concat>
+		
+		<replace file="work/easyXDM.async.combined.js" token="%%version%%" value="${project.build.version}.${build.number}"/>
+		
+		<!-- Process pre proccesing instructions like #if/#endif etc -->
+		<preprocess infile="work/easyXDM.async.combined.js" outfile="work/easyXDM.async.js" defines="async"/>
+		<preprocess infile="work/easyXDM.async.combined.js" outfile="work/easyXDM.async.debug.js" defines="debug, async"/>
+		<preprocess infile="${project.src.dir}/name.html" outfile="work/name.html"/>
+		
+		<preprocess infile="${project.src.dir}/Socket.js" outfile="work/Socket.js" defines="async"/>
+		<preprocess infile="${project.src.dir}/Socket.js" outfile="work/Socket.debug.js" defines="debug, async"/>
+		<preprocess infile="${project.src.dir}/Rpc.js" outfile="work/Rpc.js" defines="async"/>
+		<preprocess infile="${project.src.dir}/Rpc.js" outfile="work/Rpc.debug.js" defines="debug, async"/>
+		
+		<preprocess infile="${project.src.dir}/stack/SameOriginTransport.js" outfile="work/stack/SameOriginTransport.js" defines="async"/>
+		<preprocess infile="${project.src.dir}/stack/SameOriginTransport.js" outfile="work/stack/SameOriginTransport.debug.js" defines="debug, async"/>
+		
+		<preprocess infile="${project.src.dir}/stack/FlashTransport.js" outfile="work/stack/FlashTransport.js" defines="async"/>
+		<preprocess infile="${project.src.dir}/stack/FlashTransport.js" outfile="work/stack/FlashTransport.debug.js" defines="debug, async"/>
+		
+		<preprocess infile="${project.src.dir}/stack/PostMessageTransport.js" outfile="work/stack/PostMessageTransport.js" defines="async"/>
+		<preprocess infile="${project.src.dir}/stack/PostMessageTransport.js" outfile="work/stack/PostMessageTransport.debug.js" defines="debug, async"/>
+		
+		<preprocess infile="${project.src.dir}/stack/FrameElementTransport.js" outfile="work/stack/FrameElementTransport.js" defines="async"/>
+		<preprocess infile="${project.src.dir}/stack/FrameElementTransport.js" outfile="work/stack/FrameElementTransport.debug.js" defines="debug, async"/>
+		
+		<preprocess infile="${project.src.dir}/stack/NameTransport.js" outfile="work/stack/NameTransport.js" defines="async"/>
+		<preprocess infile="${project.src.dir}/stack/NameTransport.js" outfile="work/stack/NameTransport.debug.js" defines="debug, async"/>
+		
+		<preprocess infile="${project.src.dir}/stack/HashTransport.js" outfile="work/stack/HashTransport.js" defines="async"/>
+		<preprocess infile="${project.src.dir}/stack/HashTransport.js" outfile="work/stack/HashTransport.debug.js" defines="debug, async"/>
+		
+		<preprocess infile="${project.src.dir}/stack/ReliableBehavior.js" outfile="work/stack/ReliableBehavior.js" defines="async"/>
+		<preprocess infile="${project.src.dir}/stack/ReliableBehavior.js" outfile="work/stack/ReliableBehavior.debug.js" defines="debug, async"/>
+		
+		<preprocess infile="${project.src.dir}/stack/QueueBehavior.js" outfile="work/stack/QueueBehavior.js" defines="async"/>
+		<preprocess infile="${project.src.dir}/stack/QueueBehavior.js" outfile="work/stack/QueueBehavior.debug.js" defines="debug, async"/>
+		
+		<preprocess infile="${project.src.dir}/stack/VerifyBehavior.js" outfile="work/stack/VerifyBehavior.js" defines="async"/>
+		<preprocess infile="${project.src.dir}/stack/VerifyBehavior.js" outfile="work/stack/VerifyBehavior.debug.js" defines="debug, async"/>
+		
+		<preprocess infile="${project.src.dir}/stack/RpcBehavior.js" outfile="work/stack/RpcBehavior.js" defines="async"/>
+		<preprocess infile="${project.src.dir}/stack/RpcBehavior.js" outfile="work/stack/RpcBehavior.debug.js" defines="debug, async"/>
+			
+		<!-- Compress the file using the YUI Compressor -->
+		<yuicompress infile="work/easyXDM.async.js" outfile="work/easyXDM.async.min.js" />
+		<yuicompress infile="work/Socket.js" outfile="work/Socket.min.js" />
+		<yuicompress infile="work/Rpc.js" outfile="work/Rpc.min.js" />
+		<yuicompress infile="work/stack/SameOriginTransport.js" outfile="work/stack/SameOriginTransport.min.js" />
+		<yuicompress infile="work/stack/FlashTransport.js" outfile="work/stack/FlashTransport.min.js" />
+		<yuicompress infile="work/stack/PostMessageTransport.js" outfile="work/stack/PostMessageTransport.min.js" />
+		<yuicompress infile="work/stack/FrameElementTransport.js" outfile="work/stack/FrameElementTransport.min.js" />
+		<yuicompress infile="work/stack/NameTransport.js" outfile="work/stack/NameTransport.min.js" />
+		<yuicompress infile="work/stack/HashTransport.js" outfile="work/stack/HashTransport.min.js" />
+		<yuicompress infile="work/stack/ReliableBehavior.js" outfile="work/stack/ReliableBehavior.min.js" />
+		<yuicompress infile="work/stack/QueueBehavior.js" outfile="work/stack/QueueBehavior.min.js" />
+		<yuicompress infile="work/stack/VerifyBehavior.js" outfile="work/stack/VerifyBehavior.min.js" />
+		<yuicompress infile="work/stack/RpcBehavior.js" outfile="work/stack/RpcBehavior.min.js" />
+		
+		<!-- concat header files -->
+		<concat destfile="${project.build.artifactdir}v${project.build.version}/easyXDM.async.js">
+			<fileset dir="." includes="${project.src.dir}/header.js" />
+			<fileset dir="." includes="work/easyXDM.async.js" />
+		</concat>
+		<concat destfile="${project.build.artifactdir}v${project.build.version}/easyXDM.async.debug.js">
+			<fileset dir="." includes="${project.src.dir}/header.js" />
+			<fileset dir="." includes="work/easyXDM.async.debug.js" />
+		</concat>
+		<concat destfile="${project.build.artifactdir}v${project.build.version}/easyXDM.async.min.js">
+			<fileset dir="." includes="${project.src.dir}/header.js" />
+			<fileset dir="." includes="work/easyXDM.async.min.js" />
+		</concat>
+		
+		<delete file="work/easyXDM.async.combined.js" quiet="true"/>
+		
+		<!-- copy files to ouput -->
 		<copy todir="${project.build.artifactdir}v${project.build.version}">
 			<fileset dir="work"/>
 			<fileset file= "MIT-license.txt"/>
@@ -130,84 +211,8 @@
 		<buildnumber/>
 		<mkdir dir="work/stack"/>
 		
-		<concat destfile="work/easyXDM.combined.js">	
-			<fileset dir="." includes="${project.src.dir}/begin_scope.txt" />
-			<fileset dir="." includes="${project.src.dir}/Core.js" />
-			<fileset dir="." includes="${project.src.dir}/end_scope.txt" />
-		</concat>
 		
-		<replace file="work/easyXDM.combined.js" token="%%version%%" value="${project.build.version}.${build.number}"/>
 		
-		<!-- Process pre proccesing instructions like #if/#endif etc -->
-		<preprocess infile="work/easyXDM.combined.js" outfile="work/easyXDM.js"/>
-		<preprocess infile="work/easyXDM.combined.js" outfile="work/easyXDM.debug.js" defines="debug"/>
-		<preprocess infile="${project.src.dir}/name.html" outfile="work/name.html"/>
-		
-		<preprocess infile="${project.src.dir}/Socket.js" outfile="work/Socket.js"/>
-		<preprocess infile="${project.src.dir}/Socket.js" outfile="work/Socket.debug.js" defines="debug"/>
-		<preprocess infile="${project.src.dir}/Rpc.js" outfile="work/Rpc.js"/>
-		<preprocess infile="${project.src.dir}/Rpc.js" outfile="work/Rpc.debug.js" defines="debug"/>
-		
-		<preprocess infile="${project.src.dir}/stack/SameOriginTransport.js" outfile="work/stack/SameOriginTransport.js"/>
-		<preprocess infile="${project.src.dir}/stack/SameOriginTransport.js" outfile="work/stack/SameOriginTransport.debug.js" defines="debug"/>
-		
-		<preprocess infile="${project.src.dir}/stack/FlashTransport.js" outfile="work/stack/FlashTransport.js"/>
-		<preprocess infile="${project.src.dir}/stack/FlashTransport.js" outfile="work/stack/FlashTransport.debug.js" defines="debug"/>
-		
-		<preprocess infile="${project.src.dir}/stack/PostMessageTransport.js" outfile="work/stack/PostMessageTransport.js"/>
-		<preprocess infile="${project.src.dir}/stack/PostMessageTransport.js" outfile="work/stack/PostMessageTransport.debug.js" defines="debug"/>
-		
-		<preprocess infile="${project.src.dir}/stack/FrameElementTransport.js" outfile="work/stack/FrameElementTransport.js"/>
-		<preprocess infile="${project.src.dir}/stack/FrameElementTransport.js" outfile="work/stack/FrameElementTransport.debug.js" defines="debug"/>
-		
-		<preprocess infile="${project.src.dir}/stack/NameTransport.js" outfile="work/stack/NameTransport.js"/>
-		<preprocess infile="${project.src.dir}/stack/NameTransport.js" outfile="work/stack/NameTransport.debug.js" defines="debug"/>
-		
-		<preprocess infile="${project.src.dir}/stack/HashTransport.js" outfile="work/stack/HashTransport.js"/>
-		<preprocess infile="${project.src.dir}/stack/HashTransport.js" outfile="work/stack/HashTransport.debug.js" defines="debug"/>
-		
-		<preprocess infile="${project.src.dir}/stack/ReliableBehavior.js" outfile="work/stack/ReliableBehavior.js"/>
-		<preprocess infile="${project.src.dir}/stack/ReliableBehavior.js" outfile="work/stack/ReliableBehavior.debug.js" defines="debug"/>
-		
-		<preprocess infile="${project.src.dir}/stack/QueueBehavior.js" outfile="work/stack/QueueBehavior.js"/>
-		<preprocess infile="${project.src.dir}/stack/QueueBehavior.js" outfile="work/stack/QueueBehavior.debug.js" defines="debug"/>
-		
-		<preprocess infile="${project.src.dir}/stack/VerifyBehavior.js" outfile="work/stack/VerifyBehavior.js"/>
-		<preprocess infile="${project.src.dir}/stack/VerifyBehavior.js" outfile="work/stack/VerifyBehavior.debug.js" defines="debug"/>
-		
-		<preprocess infile="${project.src.dir}/stack/RpcBehavior.js" outfile="work/stack/RpcBehavior.js"/>
-		<preprocess infile="${project.src.dir}/stack/RpcBehavior.js" outfile="work/stack/RpcBehavior.debug.js" defines="debug"/>
-			
-		<!-- Compress the file using the YUI Compressor -->
-		<yuicompress infile="work/easyXDM.js" outfile="work/easyXDM.min.js" />
-		<yuicompress infile="work/Socket.js" outfile="work/Socket.min.js" />
-		<yuicompress infile="work/Rpc.js" outfile="work/Rpc.min.js" />
-		<yuicompress infile="work/stack/SameOriginTransport.js" outfile="work/stack/SameOriginTransport.min.js" />
-		<yuicompress infile="work/stack/FlashTransport.js" outfile="work/stack/FlashTransport.min.js" />
-		<yuicompress infile="work/stack/PostMessageTransport.js" outfile="work/stack/PostMessageTransport.min.js" />
-		<yuicompress infile="work/stack/FrameElementTransport.js" outfile="work/stack/FrameElementTransport.min.js" />
-		<yuicompress infile="work/stack/NameTransport.js" outfile="work/stack/NameTransport.min.js" />
-		<yuicompress infile="work/stack/HashTransport.js" outfile="work/stack/HashTransport.min.js" />
-		<yuicompress infile="work/stack/ReliableBehavior.js" outfile="work/stack/ReliableBehavior.min.js" />
-		<yuicompress infile="work/stack/QueueBehavior.js" outfile="work/stack/QueueBehavior.min.js" />
-		<yuicompress infile="work/stack/VerifyBehavior.js" outfile="work/stack/VerifyBehavior.min.js" />
-		<yuicompress infile="work/stack/RpcBehavior.js" outfile="work/stack/RpcBehavior.min.js" />
-		
-		<!-- concat header files -->
-		<concat destfile="${project.build.artifactdir}v${project.build.version}/easyXDM.js">
-			<fileset dir="." includes="${project.src.dir}/header.js" />
-			<fileset dir="." includes="work/easyXDM.js" />
-		</concat>
-		<concat destfile="${project.build.artifactdir}v${project.build.version}/easyXDM.debug.js">
-			<fileset dir="." includes="${project.src.dir}/header.js" />
-			<fileset dir="." includes="work/easyXDM.debug.js" />
-		</concat>
-		<concat destfile="${project.build.artifactdir}v${project.build.version}/easyXDM.min.js">
-			<fileset dir="." includes="${project.src.dir}/header.js" />
-			<fileset dir="." includes="work/easyXDM.min.js" />
-		</concat>
-		
-		<delete file="work/easyXDM.combined.js" quiet="true"/>
 		
 		<copy todir="${project.build.artifactdir}v${project.build.version}">
 			<fileset dir="work"/>
