--- a/build.xml
+++ b/build.xml
@@ -68,7 +68,8 @@
 		
 		<!-- Process pre proccesing instructions like #if/#endif etc -->
 		<preprocess infile="work/easyXDM.combined.js" outfile="work/easyXDM.js"/>
-		<preprocess infile="work/easyXDM.combined.js" outfile="work/easyXDM.debug.js" defines="debug"/>
+		<preprocess infile="work/easyXDM.combined.js" outfile="work/easyXDM.debug.js" defines="debug,log"/>
+		<preprocess infile="work/easyXDM.combined.js" outfile="work/easyXDM.jasper.js" defines="log,jasper"/>
 		<preprocess infile="${project.src.dir}/name.html" outfile="work/name.html"/>
 		<preprocess infile="${project.src.dir}/widgets/Widgets.js" outfile="work/easyXDM.Widgets.js"/>
 		<preprocess infile="${project.src.dir}/widgets/Widgets.js" outfile="work/easyXDM.Widgets.debug.js" defines="debug"/>
@@ -90,7 +91,11 @@
 			<fileset dir="." includes="${project.src.dir}/header.js" />
 			<fileset dir="." includes="work/easyXDM.min.js" />
 		</concat>
-		
+        <concat destfile="${project.build.artifactdir}v${project.build.version}/easyXDM.jasper.js">
+            <fileset dir="." includes="${project.src.dir}/header.js" />
+            <fileset dir="." includes="work/easyXDM.jasper.js" />
+        </concat>
+
 		<concat destfile="${project.build.artifactdir}v${project.build.version}/easyXDM.Widgets.js">
 			<fileset dir="." includes="${project.src.dir}/header.js" />
 			<fileset dir="." includes="work/easyXDM.Widgets.js" />
